# RL-Vehicle-Routing-PPO

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start-osrm.ps1
configuration/: __init__.py  cli.py  device.py  environment.py  evaluation.py  io.py  learning.py  model.py  monitor.py  ppo.py  pretraining.py  reward.py  service.py  telemetry.py  training.py
core/: dataset.py  embedding.py  environment.py  graph.py  inference.py  mask.py  model.py  ppo.py  services.py  state.py  training.py
core/dataset/: __init__.py  dataset.py  generation.py
core/inference/: __init__.py  evaluation.py  inference.py
core/shared/: __init__.py  environment.py  episode.py  graph.py  mask.py  model.py  services.py  state.py
core/training/: __init__.py  ppo.py  pretraining.py  schedulers.py  session.py  training.py
main/: dataset_pipeline.py  evaluate.py  generate_dataset.py  infer.py  inference_visualization.ipynb  pretrain.py  train.py
model/: gnn_model.py  policy_model.py
tests/: conftest.py  test_dataset.py  test_distribution.py  test_environment.py  test_gae.py  test_graph.py  test_inference.py  test_mask.py  test_model.py  test_services_live.py  test_state.py  test_tools.py  test_training.py
tools/: auxiliary.py  config.py  inspection.py  logger.py  parallel.py  resource_monitor.py  telemetry.py  tracker.py
vroom-conf/: config.yml
webui/: process_manager.py  project_paths.py  request_router.py  results_browser.py  run.sh  scenario_lab.py  scenario_templates.py  script_catalog.py  serve.py  web_logger.py  web_ui_server.py
(+50 files in other folders)
